[package]
name = "rsiv"
description = "Image viewer"
authors = ["miniaoumiae"]
license = "GPL-3.0-or-later"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.25"
winit = "0.30"
pixels = "0.15.0"
cosmic-text = "0.17"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9"
resvg = "0.46"
tiny-skia = "0.11"
infer = "0.19"
rayon = "1.11.0"
clap = { version = "4.5.56", features = ["derive"] }
walkdir = "2.5.0"

# [profile.release]
# opt-level = 3
## opt-level = 's'
# lto = true
# codegen-units = 1
# panic = 'abort'
# strip = true
