[package]
name = "rsiv"
description = "Image viewer"
authors = ["miniaoumiae"]
license = "GPL-3.0-or-later"
version = "1.0.0"
edition = "2021"

[dependencies]
image = "0.25"
winit = "0.30"
pixels = "0.15.0"
cosmic-text = "0.17"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9"
resvg = "0.46"
tiny-skia = "0.11"
infer = "0.19"
rayon = "1.11.0"
clap = { version = "4.5.56", features = ["derive"] }
walkdir = "2.5.0"
memmap2 = "0.9.9"
crossbeam-channel = "0.5.15"
num_cpus = "1.17.0"
nucleo = "0.5.0"
notify = { version = "6.1", features = ["serde"] }
notify-debouncer-mini = "0.4"
kamadak-exif = "0.5"
moka = { version = "0.12", features = ["sync"] }
sysinfo = "0.30"

# [profile.release]
# # opt-level = 's'
# opt-level = 3
# lto = true
# codegen-units = 1
# panic = 'abort'
# strip = true
